dept2/proj2/app4/prd-app4-namespace/app4-jmslistener/deployment.yaml
---
# Source: proxy-chart/charts/application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-app4-jmslistener
  labels:
    app: release-name-app4-jmslistener
    app.kubernetes.io/name: app4-jmslistener
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    package-name: app4-jmslistener-binprd
spec:
  replicas: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: app4-jmslistener
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app4-jmslistener
        app.kubernetes.io/instance: release-name
    spec:
      
      serviceAccountName: release-name-app4-jmslistener
      securityContext:
        {}
      containers:
        - name: release-name
          securityContext:
            {}
          image: "quay.io/thason/gitops-demo:e28dc8ebfb4934cf1362f87285ebb7c2f1faf4cf"          
          imagePullPolicy: IfNotPresent
          args:
                        - sleep
                        - infinity
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          resources:
            limits:
              cpu: 800m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:

      volumes:
      # Adding host name aliases mostly for dmz environment.
      hostAliases:
        - hostnames:
          - vault-k8s.menora.co.il
          ip: x.x.x.x
