dept2/proj2/app4/prd-app4-namespace/app4-jmslistener/service.yaml
---
# Source: proxy-chart/charts/application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-app4-jmslistener
  labels:
    app: release-name-app4-jmslistener
    app.kubernetes.io/name: app4-jmslistener
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    package-name: app4-jmslistener-binprd
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: app4-jmslistener
    app.kubernetes.io/instance: release-name
